--- a/chose_blendin.html
+++ b/chose_blendin.html
@@ -2,10 +2,11 @@
 <html>
 	<head>
 		<title>PANDEMIC</title>
+		<link rel="stylesheet" type="text/css" href="css.css">
 	<head>
 	<body>
 		<div id="scene">
-			<p id="situation"><a href="first_scene.html">Restart</a></p>
+			<p id="situation"><a href="index.html">Restart</a></p>
 
 			<p id="convo">You decided to play it safe and just try to blend in with the others. Soon you start to notice that it isn't that bad and not long after that you start loving life once again </p>
 			
@@ -19,7 +20,6 @@
 				
 				background-color: #1B1B1E;
 				color: #96031A;
-				img
 			}
 
 			a {
@@ -29,33 +29,8 @@
 
 			#scene {
 				background: url("Moon_asset.png") no-repeat;
-				height: 600px; 
+				height: 600px;
+				}
 
-			}
-			img{
-				position: absolute;
-				left: 370px;
-				height:150px;
-
-			}
-			#situation{
-				font-size: 50px;
-				position: absolute;
-				top: 500px;
-				left: 300px;
-				background-color: rgba(0,0,0,0.9);
-				width: 800px;
-				text-align: center;
-
-			}
-			#convo{
-				font-size: 30px;
-				position: absolute;
-				left: 300px; 
-				background-color: rgba(0,0,0,0.9);
-				width: 800px;
-				text-align: center;
 		</style>
-
-
 	</body> 
