--- a/chose_blue.html
+++ b/chose_blue.html
@@ -2,10 +2,12 @@
 <html>
 	<head>
 		<title>PANDEMIC</title>
+		<link rel="stylesheet" type="text/css" href="css.css">
+
 	<head>
 	<body>
 		<div id="scene">
-			<p id="situation"><a href="first_scene.html">Restart</a>
+			<p id="situation"><a href="index.html">Restart</a>
 
 			<p id="convo">You wake up in your bed all sweaty and confused. Look out the window and everything is fine, just a nightmare.</p>
 			
@@ -32,29 +34,6 @@
 				height: 600px; 
 
 			}
-			img{
-				position: absolute;
-				left: 370px;
-				height:150px;
-
-			}
-			#situation{
-				font-size: 50px;
-				position: absolute;
-				top: 500px;
-				left: 300px;
-				background-color: rgba(0,0,0,0.9);
-				width: 800px;
-				text-align: center;
-
-			}
-			#convo{
-				font-size: 30px;
-				position: absolute;
-				left: 300px; 
-				background-color: rgba(0,0,0,0.9);
-				width: 800px;
-				text-align: center;
 		</style>
 
 
