--- a/chose_bomb.html
+++ b/chose_bomb.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>PANDEMIC</title>
+		<link rel="stylesheet" type="text/css" href="css.css">
 	<head>
 	<body>
 		<div id="scene">
@@ -19,7 +20,6 @@
 				
 				background-color: #1B1B1E;
 				color: #96031A;
-				img
 			}
 
 			a {
@@ -32,29 +32,6 @@
 				height: 500px; 
 
 			}
-			img{
-				position: absolute;
-				left: 370px;
-				height:150px;
-
-			}
-			#situation{
-				font-size: 50px;
-				position: absolute;
-				top: 450px;
-				left: 300px;
-				background-color: rgba(0,0,0,0.9);
-				width: 800px;
-				text-align: center;
-
-			}
-			#convo{
-				font-size: 30px;
-				position: absolute;
-				left: 300px; 
-				background-color: rgba(0,0,0,0.9);
-				width: 800px;
-				text-align: center;
 		</style>
 
 
