--- a/chose_credits.html
+++ b/chose_credits.html
@@ -6,9 +6,10 @@
 	<body>
 		<div id="scene">
 			<img src="credits.png">
-			<p id="situation"><a href="first_scene.html">Main Menu</a></p>
+			<p id="situation"><a href="index.html">Main Menu</a></p>
 
-			<p id="convo">Thanks for playing <br>Developed by: Boris Ivanov<br>Art from: <a href="https://craftpix.net/">Craftpix.net</a><br>Music by: <a href="https://www.bensound.com/royalty-free-music/track/better-days">Bensound</a></p>
+			<p id="convo">Thanks for playing <br><br>Developed by: <a href="https://github.com/Boris-D-Ivaov">Boris Ivanov</a> 
+				<br>Art from: <a href="https://craftpix.net/">Craftpix.net</a><br>Music by: <a href="https://www.bensound.com/royalty-free-music/track/better-days">Bensound</a></p>
 			
 		</div>
 			
@@ -29,32 +30,32 @@
 				color: #96031A;
 
 			}
-
-			
-			img{
-				position: absolute;
-				left: 400px;
-				height: 150px;
-
+			img {
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
+				width: 50%;
 			}
-			#situation{
-				font-size: 50px;
-				position: absolute;
-				top: 400px;
-				left: 300px;
-				background-color: rgba(0,0,0,0.9);
-				width: 800px;
+
+			#situation {
+				font-family: "courier new";
+				font-size: 20px;
+				margin-left: auto;
+				margin-right: auto;
+				background-color: rgba(0,0,0,0.8);
+				width: 400px;
 				text-align: center;
-
 			}
-			#convo{
+
+			#convo {
+				font-family: "courier new";
 				font-size: 30px;
-				position: absolute;
-				top: 130px;
-				left: 540px; 
-				<!background-color: rgba(0,0,0,0.9);>
+				margin-left: auto;
+				margin-right: auto;
 				width: 800px;
 				text-align: center;
+			}
+
 		</style>
 
 
