--- a/chose_run.html
+++ b/chose_run.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>PANDEMIC</title>
+		<link rel="stylesheet" type="text/css" href="css.css">
 	<head>
 	<body>
 		<div id="scene">
@@ -38,23 +39,7 @@
 				height:150px;
 
 			}
-			#situation{
-				font-size: 50px;
-				position: absolute;
-				top: 500px;
-				left: 300px;
-				background-color: rgba(0,0,0,0.9);
-				width: 800px;
-				text-align: center;
 
-			}
-			#convo{
-				font-size: 30px;
-				position: absolute;
-				left: 300px; 
-				background-color: rgba(0,0,0,0.9);
-				width: 800px;
-				text-align: center;
 		</style>
 
 
