--- a/chose_stay.html
+++ b/chose_stay.html
@@ -2,10 +2,11 @@
 <html>
 	<head>
 		<title>PANDEMIC</title>
+		<link rel="stylesheet" type="text/css" href="css.css">
 	<head>
 	<body>
 		<div id="scene">
-			<p id="situation"><a href="first_scene.html">Restart</a></p>
+			<p id="situation"><a href="index.html">Restart</a></p>
 
 			<p id="convo">You are now in the middle of the crowd surrounded by people that don't seem to notice you. You begin to notice that everyone's eyes are really bloodshot. Your mind starts to get cloudy and next thing you know, you are in your bed. Just a bad dream</p>
 			
@@ -19,7 +20,7 @@
 				
 				background-color: #1B1B1E;
 				color: #96031A;
-				img
+				
 			}
 
 			a {
@@ -32,29 +33,7 @@
 				height: 600px; 
 
 			}
-			img{
-				position: absolute;
-				left: 370px;
-				height:150px;
 
-			}
-			#situation{
-				font-size: 50px;
-				position: absolute;
-				top: 500px;
-				left: 300px;
-				background-color: rgba(0,0,0,0.9);
-				width: 800px;
-				text-align: center;
-
-			}
-			#convo{
-				font-size: 30px;
-				position: absolute;
-				left: 300px; 
-				background-color: rgba(0,0,0,0.9);
-				width: 800px;
-				text-align: center;
 		</style>
 
 
