--- a/chose_zombies.html
+++ b/chose_zombies.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>PANDEMIC</title>
+		<link rel="stylesheet" type="text/css" href="css.css">
 	<head>
 	<body>
 		<div id="scene">
@@ -32,29 +33,6 @@
 				height: 500px; 
 
 			}
-			img{
-				position: absolute;
-				left: 370px;
-				height: 150px;
-
-			}
-			#situation{
-				font-size: 50px;
-				position: absolute;
-				top: 400px;
-				left: 300px;
-				background-color: rgba(0,0,0,0.9);
-				width: 800px;
-				text-align: center;
-
-			}
-			#convo{
-				font-size: 30px;
-				position: absolute;
-				left: 300px; 
-				background-color: rgba(0,0,0,0.9);
-				width: 800px;
-				text-align: center;
 		</style>
 
 
