--- a/start.html
+++ b/start.html
@@ -2,10 +2,11 @@
 <html>
 	<head>
 		<title>PANDEMIC</title>
+		<link rel="stylesheet" type="text/css" href="css.css">
 	<head>
 	<body>
 		<div id="scene">
-			<p id="situation">Take the<a href="chose_red.html"> red</a> pill or take the <a href="chose_blue.html">blue</a> pill</p>
+			<p id="situation">Take the <a href="chose_red.html">red</a> pill or take the <a href="chose_blue.html">blue</a> pill</p>
 
 			<p id="convo">You wake up hurting and confused. Look around and notice everything is in ruins. You find a small metal box with a strange logo lying infront of you. You open it and find two pills and a note.
 
@@ -34,29 +35,6 @@
 				height: 600px; 
 
 			}
-			img{
-				position: absolute;
-				left: 370px;
-				height:150px;
-
-			}
-			#situation{
-				font-size: 50px;
-				position: absolute;
-				top: 500px;
-				left: 300px;
-				background-color: rgba(0,0,0,0.9);
-				width: 800px;
-				text-align: center;
-
-			}
-			#convo{
-				font-size: 30px;
-				position: absolute;
-				left: 300px; 
-				background-color: rgba(0,0,0,0.9);
-				width: 800px;
-				text-align: center;
 		</style>
 
 
