--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>PANDEMIC</title>
 		<script type = "text/javascript" src="alert.js"></script>  
 		<body onload="showAlert()">
+		<link rel="stylesheet" type="text/css" href="css.css">
 	<head>
 
 	<body>
@@ -22,30 +23,20 @@
 				color: #96031A;
 			}
 
-			a {
-				color: #96031A;
-
-			}
 
 			#scene {
 				background: url("postapocalypse3.png") no-repeat;
 				height: 600px; 
 
 			}
-			img{
-				position: absolute;
-				left: 370px;
-				height:150px;
-
-			}
-			#situation{
-				position: absolute;
-				top: 300px;
-				left: 500px;
+			#situation {
+				font-family: "courier new";
+				font-size: 45px;
+				margin-left: auto;
+				margin-right: auto;
 				background-color: rgba(0,0,0,0.8);
 				width: 400px;
 				text-align: center;
-
 			}
 		</style>
 
